--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 VERSION 1
 
 It should give the user the option of
+- displaying the stored dreams
 - creating a dream entry, containing the creation date, keywords (jot down upon waking up from dream), tags (#topic, #type (like nightmare, lucid)), dream report, thoughts (interpretation, thoughts) about the dream
   - big "+" symbol
   - autocreate date and time of writing dream note
   - give prompts (questions), but also general notes field
-- displaying the stored dreams
 - updating a dream
 - deleting a dream
+
+DESIGN
+Material Ui -> MUI core -> Joy UI
 
 VERSION 2
 - getting an overview of the type and frequency of their dream topics, dream types. 
