--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
