--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm run server\" \"npm run dev\"",
-    "dev": "nodemon server",
-    "server": "json-server --watch db.json --port 4000"
+    "start": "nodemon server.js"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1"
   },
