--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tagcloud": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
