--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@mui/icons-material": "^5.15.19"
+    "@mui/icons-material": "^5.15.19",
+    "react-loader-spinner": "^6.1.6"
   }
 }
